# abcso

./: README.md  build_and_run.bat  build_and_run.sh  clean.bat  clean.sh  test_linux.sh
project_a/: CMakeLists.txt  interface.h  main.cpp  plugin_loader.cpp  plugin_loader.h
project_b/: CMakeLists.txt  plugin_factory.cpp  plugin_implementation.cpp  plugin_implementation.h
